parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> pddl
Rule 1     pddl -> domain
Rule 2     pddl -> problem
Rule 3     pddl -> domain problem
Rule 4     domain -> LPAREN DEFINE_KEY domain_structure_def_lst RPAREN
Rule 5     domain_structure_def_lst -> domain_structure_def domain_structure_def_lst
Rule 6     domain_structure_def_lst -> domain_structure_def
Rule 7     domain_structure_def -> domain_def
Rule 8     domain_structure_def -> require_def
Rule 9     domain_structure_def -> types_def
Rule 10    domain_structure_def -> constants_def
Rule 11    domain_structure_def -> predicates_def
Rule 12    domain_structure_def -> action_def_lst
Rule 13    domain_def -> LPAREN DOMAIN_KEY NAME RPAREN
Rule 14    require_def -> LPAREN REQUIREMENTS_KEY require_key_lst RPAREN
Rule 15    require_key_lst -> require_key require_key_lst
Rule 16    require_key_lst -> require_key
Rule 17    require_key -> ADL_KEY
Rule 18    require_key -> STRIPS_KEY
Rule 19    require_key -> EQUALITY_KEY
Rule 20    require_key -> TYPING_KEY
Rule 21    require_key -> PROBABILISTIC_EFFECTS_KEY
Rule 22    require_key -> NON_DETERMINISTIC_KEY
Rule 23    require_key -> CONDITIONAL_EFFECTS_KEY
Rule 24    require_key -> EXISTENTIAL_PRECONDITIONS_KEY
Rule 25    require_key -> NEGATIVE_PRECONDITIONS_KEY
Rule 26    require_key -> UNIVERSAL_PRECONDITIONS_KEY
Rule 27    require_key -> DISJUNCTIVE_PRECONDITIONS_KEY
Rule 28    types_def -> LPAREN TYPES_KEY typed_names_lst RPAREN
Rule 29    constants_def -> LPAREN CONSTANTS_KEY typed_constants_lst RPAREN
Rule 30    predicates_def -> LPAREN PREDICATES_KEY predicate_def_lst RPAREN
Rule 31    predicate_def_lst -> predicate_def predicate_def_lst
Rule 32    predicate_def_lst -> predicate_def
Rule 33    predicate_def -> LPAREN NAME typed_variables_lst RPAREN
Rule 34    predicate_def -> LPAREN NAME RPAREN
Rule 35    action_def_lst -> action_def action_def_lst
Rule 36    action_def_lst -> action_def
Rule 37    action_def -> LPAREN ACTION_KEY NAME action_def_body_list RPAREN
Rule 38    action_def_body_list -> action_def_body action_def_body_list
Rule 39    action_def_body_list -> action_def_body
Rule 40    action_def_body -> parameters_def
Rule 41    action_def_body -> precond_def
Rule 42    action_def_body -> effect_def
Rule 43    parameters_def -> PARAMETERS_KEY LPAREN typed_variables_lst RPAREN
Rule 44    parameters_def -> PARAMETERS_KEY LPAREN RPAREN
Rule 45    precond_def -> PRECONDITION_KEY LPAREN AND_KEY preconds_lst RPAREN
Rule 46    precond_def -> PRECONDITION_KEY LPAREN RPAREN
Rule 47    precond_def -> PRECONDITION_KEY precond
Rule 48    preconds_lst -> precond preconds_lst
Rule 49    preconds_lst -> precond
Rule 50    precond -> literal
Rule 51    precond -> universal_precond
Rule 52    precond -> existential_precond
Rule 53    universal_precond -> <empty>
Rule 54    universal_precond -> LPAREN FORALL_KEY LPAREN typed_variables_lst RPAREN literal RPAREN
Rule 55    universal_precond -> LPAREN FORALL_KEY LPAREN typed_variables_lst RPAREN LPAREN AND_KEY literals_lst RPAREN RPAREN
Rule 56    existential_precond -> <empty>
Rule 57    existential_precond -> LPAREN EXISTS_KEY LPAREN typed_variables_lst RPAREN literal RPAREN
Rule 58    existential_precond -> LPAREN EXISTS_KEY LPAREN typed_variables_lst RPAREN LPAREN AND_KEY literals_lst RPAREN RPAREN
Rule 59    effect_def -> EFFECT_KEY LPAREN AND_KEY effect_lst RPAREN
Rule 60    effect_def -> EFFECT_KEY effect
Rule 61    effect_lst -> effect effect_lst
Rule 62    effect_lst -> effect
Rule 63    effect -> literal
Rule 64    effect -> conditional_for_eff
Rule 65    effect -> conditional_when_eff
Rule 66    effect -> LPAREN PROBABILISTIC_KEY prob_effect_lst RPAREN
Rule 67    effect -> LPAREN ONEOF_KEY nd_effect_lst RPAREN
Rule 68    effect -> LPAREN AND_KEY RPAREN
Rule 69    nd_effect_lst -> nd_effect nd_effect_lst
Rule 70    nd_effect_lst -> nd_effect
Rule 71    nd_effect -> LPAREN AND_KEY effect_lst RPAREN
Rule 72    nd_effect -> effect
Rule 73    prob_effect_lst -> prob_effect prob_effect_lst
Rule 74    prob_effect_lst -> prob_effect
Rule 75    prob_effect -> PROBABILITY LPAREN AND_KEY effect_lst RPAREN
Rule 76    prob_effect -> PROBABILITY effect
Rule 77    conditional_for_eff -> <empty>
Rule 78    conditional_for_eff -> LPAREN FORALL_KEY LPAREN typed_variables_lst RPAREN conditional_when_eff RPAREN
Rule 79    conditional_for_eff -> LPAREN FORALL_KEY LPAREN typed_variables_lst RPAREN literal RPAREN
Rule 80    conditional_for_eff -> LPAREN FORALL_KEY LPAREN typed_variables_lst RPAREN LPAREN AND_KEY literals_lst RPAREN RPAREN
Rule 81    conditional_when_eff -> <empty>
Rule 82    conditional_when_eff -> LPAREN WHEN_KEY literal literal RPAREN
Rule 83    conditional_when_eff -> LPAREN WHEN_KEY LPAREN AND_KEY literals_lst RPAREN literal RPAREN
Rule 84    conditional_when_eff -> LPAREN WHEN_KEY literal LPAREN AND_KEY literals_lst RPAREN RPAREN
Rule 85    conditional_when_eff -> LPAREN WHEN_KEY LPAREN AND_KEY literals_lst RPAREN LPAREN AND_KEY literals_lst RPAREN RPAREN
Rule 86    literals_lst -> literal literals_lst
Rule 87    literals_lst -> literal
Rule 88    literal -> LPAREN NOT_KEY predicate RPAREN
Rule 89    literal -> predicate
Rule 90    ground_predicates_lst -> ground_predicate ground_predicates_lst
Rule 91    ground_predicates_lst -> ground_predicate
Rule 92    predicate -> LPAREN NAME arguments_lst RPAREN
Rule 93    predicate -> LPAREN EQUALS VARIABLE VARIABLE RPAREN
Rule 94    predicate -> LPAREN EQUALS VARIABLE constant RPAREN
Rule 95    predicate -> LPAREN EQUALS constant VARIABLE RPAREN
Rule 96    predicate -> LPAREN NAME RPAREN
Rule 97    arguments_lst -> constant arguments_lst
Rule 98    arguments_lst -> VARIABLE arguments_lst
Rule 99    arguments_lst -> constant
Rule 100   arguments_lst -> VARIABLE
Rule 101   ground_predicate -> LPAREN NAME constants_lst RPAREN
Rule 102   ground_predicate -> LPAREN NAME RPAREN
Rule 103   typed_constants_lst -> constants_lst HYPHEN type typed_constants_lst
Rule 104   typed_constants_lst -> constants_lst HYPHEN type
Rule 105   typed_variables_lst -> variables_lst HYPHEN type typed_variables_lst
Rule 106   typed_variables_lst -> variables_lst HYPHEN type
Rule 107   constants_lst -> constant constants_lst
Rule 108   constants_lst -> constant
Rule 109   variables_lst -> VARIABLE variables_lst
Rule 110   variables_lst -> VARIABLE
Rule 111   typed_names_lst -> names_lst HYPHEN type typed_names_lst
Rule 112   typed_names_lst -> names_lst HYPHEN type
Rule 113   typed_names_lst -> names_lst
Rule 114   names_lst -> NAME names_lst
Rule 115   names_lst -> NAME
Rule 116   problem -> LPAREN DEFINE_KEY problem_structure_def_lst RPAREN
Rule 117   problem_structure_def_lst -> problem_structure_def problem_structure_def_lst
Rule 118   problem_structure_def_lst -> problem_structure_def
Rule 119   problem_structure_def -> problem_def
Rule 120   problem_structure_def -> domain_def
Rule 121   problem_structure_def -> objects_def
Rule 122   problem_structure_def -> init_def
Rule 123   problem_structure_def -> goal_def
Rule 124   problem_def -> LPAREN PROBLEM_KEY NAME RPAREN
Rule 125   objects_def -> LPAREN OBJECTS_KEY typed_constants_lst RPAREN
Rule 126   init_def -> LPAREN INIT_KEY LPAREN AND_KEY ground_predicates_lst RPAREN RPAREN
Rule 127   init_def -> LPAREN INIT_KEY ground_predicates_lst RPAREN
Rule 128   goal_def -> LPAREN GOAL_KEY LPAREN AND_KEY ground_predicates_lst RPAREN RPAREN
Rule 129   goal_def -> LPAREN GOAL_KEY ground_predicates_lst RPAREN
Rule 130   type -> NAME
Rule 131   constant -> NAME

Terminals, with rules where they appear

ACTION_KEY           : 37
ADL_KEY              : 17
AND_KEY              : 45 55 58 59 68 71 75 80 83 84 85 85 126 128
CONDITIONAL_EFFECTS_KEY : 23
CONSTANTS_KEY        : 29
DEFINE_KEY           : 4 116
DISJUNCTIVE_PRECONDITIONS_KEY : 27
DOMAIN_KEY           : 13
EFFECT_KEY           : 59 60
EQUALITY_KEY         : 19
EQUALS               : 93 94 95
EXISTENTIAL_PRECONDITIONS_KEY : 24
EXISTS_KEY           : 57 58
FORALL_KEY           : 54 55 78 79 80
GOAL_KEY             : 128 129
HYPHEN               : 103 104 105 106 111 112
INIT_KEY             : 126 127
LPAREN               : 4 13 14 28 29 30 33 34 37 43 44 45 46 54 54 55 55 55 57 57 58 58 58 59 66 67 68 71 75 78 78 79 79 80 80 80 82 83 83 84 84 85 85 85 88 92 93 94 95 96 101 102 116 124 125 126 126 127 128 128 129
NAME                 : 13 33 34 37 92 96 101 102 114 115 124 130 131
NEGATIVE_PRECONDITIONS_KEY : 25
NON_DETERMINISTIC_KEY : 22
NOT_KEY              : 88
OBJECTS_KEY          : 125
ONEOF_KEY            : 67
PARAMETERS_KEY       : 43 44
PRECONDITION_KEY     : 45 46 47
PREDICATES_KEY       : 30
PROBABILISTIC_EFFECTS_KEY : 21
PROBABILISTIC_KEY    : 66
PROBABILITY          : 75 76
PROBLEM_KEY          : 124
REQUIREMENTS_KEY     : 14
RPAREN               : 4 13 14 28 29 30 33 34 37 43 44 45 46 54 54 55 55 55 57 57 58 58 58 59 66 67 68 71 75 78 78 79 79 80 80 80 82 83 83 84 84 85 85 85 88 92 93 94 95 96 101 102 116 124 125 126 126 127 128 128 129
STRIPS_KEY           : 18
TYPES_KEY            : 28
TYPING_KEY           : 20
UNIVERSAL_PRECONDITIONS_KEY : 26
VARIABLE             : 93 93 94 95 98 100 109 110
WHEN_KEY             : 82 83 84 85
error                : 

Nonterminals, with rules where they appear

action_def           : 35 36
action_def_body      : 38 39
action_def_body_list : 37 38
action_def_lst       : 12 35
arguments_lst        : 92 97 98
conditional_for_eff  : 64
conditional_when_eff : 65 78
constant             : 94 95 97 99 107 108
constants_def        : 10
constants_lst        : 101 103 104 107
domain               : 1 3
domain_def           : 7 120
domain_structure_def : 5 6
domain_structure_def_lst : 4 5
effect               : 60 61 62 72 76
effect_def           : 42
effect_lst           : 59 61 71 75
existential_precond  : 52
goal_def             : 123
ground_predicate     : 90 91
ground_predicates_lst : 90 126 127 128 129
init_def             : 122
literal              : 50 54 57 63 79 82 82 83 84 86 87
literals_lst         : 55 58 80 83 84 85 85 86
names_lst            : 111 112 113 114
nd_effect            : 69 70
nd_effect_lst        : 67 69
objects_def          : 121
parameters_def       : 40
pddl                 : 0
precond              : 47 48 49
precond_def          : 41
preconds_lst         : 45 48
predicate            : 88 89
predicate_def        : 31 32
predicate_def_lst    : 30 31
predicates_def       : 11
prob_effect          : 73 74
prob_effect_lst      : 66 73
problem              : 2 3
problem_def          : 119
problem_structure_def : 117 118
problem_structure_def_lst : 116 117
require_def          : 8
require_key          : 15 16
require_key_lst      : 14 15
type                 : 103 104 105 106 111 112
typed_constants_lst  : 29 103 125
typed_names_lst      : 28 111
typed_variables_lst  : 33 43 54 55 57 58 78 79 80 105
types_def            : 9
universal_precond    : 51
variables_lst        : 105 106 109

Parsing method: LALR

state 0

    (0) S' -> . pddl
    (1) pddl -> . domain
    (2) pddl -> . problem
    (3) pddl -> . domain problem
    (4) domain -> . LPAREN DEFINE_KEY domain_structure_def_lst RPAREN
    (116) problem -> . LPAREN DEFINE_KEY problem_structure_def_lst RPAREN

    LPAREN          shift and go to state 4

    pddl                           shift and go to state 1
    domain                         shift and go to state 2
    problem                        shift and go to state 3

state 1

    (0) S' -> pddl .



state 2

    (1) pddl -> domain .
    (3) pddl -> domain . problem
    (116) problem -> . LPAREN DEFINE_KEY problem_structure_def_lst RPAREN

    $end            reduce using rule 1 (pddl -> domain .)
    LPAREN          shift and go to state 6

    problem                        shift and go to state 5

state 3

    (2) pddl -> problem .

    $end            reduce using rule 2 (pddl -> problem .)


state 4

    (4) domain -> LPAREN . DEFINE_KEY domain_structure_def_lst RPAREN
    (116) problem -> LPAREN . DEFINE_KEY problem_structure_def_lst RPAREN

    DEFINE_KEY      shift and go to state 7


state 5

    (3) pddl -> domain problem .

    $end            reduce using rule 3 (pddl -> domain problem .)


state 6

    (116) problem -> LPAREN . DEFINE_KEY problem_structure_def_lst RPAREN

    DEFINE_KEY      shift and go to state 8


state 7

    (4) domain -> LPAREN DEFINE_KEY . domain_structure_def_lst RPAREN
    (116) problem -> LPAREN DEFINE_KEY . problem_structure_def_lst RPAREN
    (5) domain_structure_def_lst -> . domain_structure_def domain_structure_def_lst
    (6) domain_structure_def_lst -> . domain_structure_def
    (117) problem_structure_def_lst -> . problem_structure_def problem_structure_def_lst
    (118) problem_structure_def_lst -> . problem_structure_def
    (7) domain_structure_def -> . domain_def
    (8) domain_structure_def -> . require_def
    (9) domain_structure_def -> . types_def
    (10) domain_structure_def -> . constants_def
    (11) domain_structure_def -> . predicates_def
    (12) domain_structure_def -> . action_def_lst
    (119) problem_structure_def -> . problem_def
    (120) problem_structure_def -> . domain_def
    (121) problem_structure_def -> . objects_def
    (122) problem_structure_def -> . init_def
    (123) problem_structure_def -> . goal_def
    (13) domain_def -> . LPAREN DOMAIN_KEY NAME RPAREN
    (14) require_def -> . LPAREN REQUIREMENTS_KEY require_key_lst RPAREN
    (28) types_def -> . LPAREN TYPES_KEY typed_names_lst RPAREN
    (29) constants_def -> . LPAREN CONSTANTS_KEY typed_constants_lst RPAREN
    (30) predicates_def -> . LPAREN PREDICATES_KEY predicate_def_lst RPAREN
    (35) action_def_lst -> . action_def action_def_lst
    (36) action_def_lst -> . action_def
    (124) problem_def -> . LPAREN PROBLEM_KEY NAME RPAREN
    (125) objects_def -> . LPAREN OBJECTS_KEY typed_constants_lst RPAREN
    (126) init_def -> . LPAREN INIT_KEY LPAREN AND_KEY ground_predicates_lst RPAREN RPAREN
    (127) init_def -> . LPAREN INIT_KEY ground_predicates_lst RPAREN
    (128) goal_def -> . LPAREN GOAL_KEY LPAREN AND_KEY ground_predicates_lst RPAREN RPAREN
    (129) goal_def -> . LPAREN GOAL_KEY ground_predicates_lst RPAREN
    (37) action_def -> . LPAREN ACTION_KEY NAME action_def_body_list RPAREN

    LPAREN          shift and go to state 9

    domain_structure_def_lst       shift and go to state 10
    problem_structure_def_lst      shift and go to state 11
    domain_structure_def           shift and go to state 12
    problem_structure_def          shift and go to state 13
    domain_def                     shift and go to state 14
    require_def                    shift and go to state 15
    types_def                      shift and go to state 16
    constants_def                  shift and go to state 17
    predicates_def                 shift and go to state 18
    action_def_lst                 shift and go to state 19
    problem_def                    shift and go to state 20
    objects_def                    shift and go to state 21
    init_def                       shift and go to state 22
    goal_def                       shift and go to state 23
    action_def                     shift and go to state 24

state 8

    (116) problem -> LPAREN DEFINE_KEY . problem_structure_def_lst RPAREN
    (117) problem_structure_def_lst -> . problem_structure_def problem_structure_def_lst
    (118) problem_structure_def_lst -> . problem_structure_def
    (119) problem_structure_def -> . problem_def
    (120) problem_structure_def -> . domain_def
    (121) problem_structure_def -> . objects_def
    (122) problem_structure_def -> . init_def
    (123) problem_structure_def -> . goal_def
    (124) problem_def -> . LPAREN PROBLEM_KEY NAME RPAREN
    (13) domain_def -> . LPAREN DOMAIN_KEY NAME RPAREN
    (125) objects_def -> . LPAREN OBJECTS_KEY typed_constants_lst RPAREN
    (126) init_def -> . LPAREN INIT_KEY LPAREN AND_KEY ground_predicates_lst RPAREN RPAREN
    (127) init_def -> . LPAREN INIT_KEY ground_predicates_lst RPAREN
    (128) goal_def -> . LPAREN GOAL_KEY LPAREN AND_KEY ground_predicates_lst RPAREN RPAREN
    (129) goal_def -> . LPAREN GOAL_KEY ground_predicates_lst RPAREN

    LPAREN          shift and go to state 25

    problem_structure_def_lst      shift and go to state 11
    problem_structure_def          shift and go to state 13
    problem_def                    shift and go to state 20
    domain_def                     shift and go to state 26
    objects_def                    shift and go to state 21
    init_def                       shift and go to state 22
    goal_def                       shift and go to state 23

state 9

    (13) domain_def -> LPAREN . DOMAIN_KEY NAME RPAREN
    (14) require_def -> LPAREN . REQUIREMENTS_KEY require_key_lst RPAREN
    (28) types_def -> LPAREN . TYPES_KEY typed_names_lst RPAREN
    (29) constants_def -> LPAREN . CONSTANTS_KEY typed_constants_lst RPAREN
    (30) predicates_def -> LPAREN . PREDICATES_KEY predicate_def_lst RPAREN
    (124) problem_def -> LPAREN . PROBLEM_KEY NAME RPAREN
    (125) objects_def -> LPAREN . OBJECTS_KEY typed_constants_lst RPAREN
    (126) init_def -> LPAREN . INIT_KEY LPAREN AND_KEY ground_predicates_lst RPAREN RPAREN
    (127) init_def -> LPAREN . INIT_KEY ground_predicates_lst RPAREN
    (128) goal_def -> LPAREN . GOAL_KEY LPAREN AND_KEY ground_predicates_lst RPAREN RPAREN
    (129) goal_def -> LPAREN . GOAL_KEY ground_predicates_lst RPAREN
    (37) action_def -> LPAREN . ACTION_KEY NAME action_def_body_list RPAREN

    DOMAIN_KEY      shift and go to state 27
    REQUIREMENTS_KEY shift and go to state 28
    TYPES_KEY       shift and go to state 29
    CONSTANTS_KEY   shift and go to state 30
    PREDICATES_KEY  shift and go to state 31
    PROBLEM_KEY     shift and go to state 32
    OBJECTS_KEY     shift and go to state 33
    INIT_KEY        shift and go to state 34
    GOAL_KEY        shift and go to state 35
    ACTION_KEY      shift and go to state 36


state 10

    (4) domain -> LPAREN DEFINE_KEY domain_structure_def_lst . RPAREN

    RPAREN          shift and go to state 37


state 11

    (116) problem -> LPAREN DEFINE_KEY problem_structure_def_lst . RPAREN

    RPAREN          shift and go to state 38


state 12

    (5) domain_structure_def_lst -> domain_structure_def . domain_structure_def_lst
    (6) domain_structure_def_lst -> domain_structure_def .
    (5) domain_structure_def_lst -> . domain_structure_def domain_structure_def_lst
    (6) domain_structure_def_lst -> . domain_structure_def
    (7) domain_structure_def -> . domain_def
    (8) domain_structure_def -> . require_def
    (9) domain_structure_def -> . types_def
    (10) domain_structure_def -> . constants_def
    (11) domain_structure_def -> . predicates_def
    (12) domain_structure_def -> . action_def_lst
    (13) domain_def -> . LPAREN DOMAIN_KEY NAME RPAREN
    (14) require_def -> . LPAREN REQUIREMENTS_KEY require_key_lst RPAREN
    (28) types_def -> . LPAREN TYPES_KEY typed_names_lst RPAREN
    (29) constants_def -> . LPAREN CONSTANTS_KEY typed_constants_lst RPAREN
    (30) predicates_def -> . LPAREN PREDICATES_KEY predicate_def_lst RPAREN
    (35) action_def_lst -> . action_def action_def_lst
    (36) action_def_lst -> . action_def
    (37) action_def -> . LPAREN ACTION_KEY NAME action_def_body_list RPAREN

    RPAREN          reduce using rule 6 (domain_structure_def_lst -> domain_structure_def .)
    LPAREN          shift and go to state 41

    domain_structure_def           shift and go to state 12
    domain_structure_def_lst       shift and go to state 39
    domain_def                     shift and go to state 40
    require_def                    shift and go to state 15
    types_def                      shift and go to state 16
    constants_def                  shift and go to state 17
    predicates_def                 shift and go to state 18
    action_def_lst                 shift and go to state 19
    action_def                     shift and go to state 24

state 13

    (117) problem_structure_def_lst -> problem_structure_def . problem_structure_def_lst
    (118) problem_structure_def_lst -> problem_structure_def .
    (117) problem_structure_def_lst -> . problem_structure_def problem_structure_def_lst
    (118) problem_structure_def_lst -> . problem_structure_def
    (119) problem_structure_def -> . problem_def
    (120) problem_structure_def -> . domain_def
    (121) problem_structure_def -> . objects_def
    (122) problem_structure_def -> . init_def
    (123) problem_structure_def -> . goal_def
    (124) problem_def -> . LPAREN PROBLEM_KEY NAME RPAREN
    (13) domain_def -> . LPAREN DOMAIN_KEY NAME RPAREN
    (125) objects_def -> . LPAREN OBJECTS_KEY typed_constants_lst RPAREN
    (126) init_def -> . LPAREN INIT_KEY LPAREN AND_KEY ground_predicates_lst RPAREN RPAREN
    (127) init_def -> . LPAREN INIT_KEY ground_predicates_lst RPAREN
    (128) goal_def -> . LPAREN GOAL_KEY LPAREN AND_KEY ground_predicates_lst RPAREN RPAREN
    (129) goal_def -> . LPAREN GOAL_KEY ground_predicates_lst RPAREN

    RPAREN          reduce using rule 118 (problem_structure_def_lst -> problem_structure_def .)
    LPAREN          shift and go to state 25

    problem_structure_def          shift and go to state 13
    problem_structure_def_lst      shift and go to state 42
    problem_def                    shift and go to state 20
    domain_def                     shift and go to state 26
    objects_def                    shift and go to state 21
    init_def                       shift and go to state 22
    goal_def                       shift and go to state 23

state 14

    (7) domain_structure_def -> domain_def .
    (120) problem_structure_def -> domain_def .

  ! reduce/reduce conflict for LPAREN resolved using rule 7 (domain_structure_def -> domain_def .)
  ! reduce/reduce conflict for RPAREN resolved using rule 7 (domain_structure_def -> domain_def .)
    LPAREN          reduce using rule 7 (domain_structure_def -> domain_def .)
    RPAREN          reduce using rule 7 (domain_structure_def -> domain_def .)

  ! LPAREN          [ reduce using rule 120 (problem_structure_def -> domain_def .) ]
  ! RPAREN          [ reduce using rule 120 (problem_structure_def -> domain_def .) ]


state 15

    (8) domain_structure_def -> require_def .

    LPAREN          reduce using rule 8 (domain_structure_def -> require_def .)
    RPAREN          reduce using rule 8 (domain_structure_def -> require_def .)


state 16

    (9) domain_structure_def -> types_def .

    LPAREN          reduce using rule 9 (domain_structure_def -> types_def .)
    RPAREN          reduce using rule 9 (domain_structure_def -> types_def .)


state 17

    (10) domain_structure_def -> constants_def .

    LPAREN          reduce using rule 10 (domain_structure_def -> constants_def .)
    RPAREN          reduce using rule 10 (domain_structure_def -> constants_def .)


state 18

    (11) domain_structure_def -> predicates_def .

    LPAREN          reduce using rule 11 (domain_structure_def -> predicates_def .)
    RPAREN          reduce using rule 11 (domain_structure_def -> predicates_def .)


state 19

    (12) domain_structure_def -> action_def_lst .

    LPAREN          reduce using rule 12 (domain_structure_def -> action_def_lst .)
    RPAREN          reduce using rule 12 (domain_structure_def -> action_def_lst .)


state 20

    (119) problem_structure_def -> problem_def .

    LPAREN          reduce using rule 119 (problem_structure_def -> problem_def .)
    RPAREN          reduce using rule 119 (problem_structure_def -> problem_def .)


state 21

    (121) problem_structure_def -> objects_def .

    LPAREN          reduce using rule 121 (problem_structure_def -> objects_def .)
    RPAREN          reduce using rule 121 (problem_structure_def -> objects_def .)


state 22

    (122) problem_structure_def -> init_def .

    LPAREN          reduce using rule 122 (problem_structure_def -> init_def .)
    RPAREN          reduce using rule 122 (problem_structure_def -> init_def .)


state 23

    (123) problem_structure_def -> goal_def .

    LPAREN          reduce using rule 123 (problem_structure_def -> goal_def .)
    RPAREN          reduce using rule 123 (problem_structure_def -> goal_def .)


state 24

    (35) action_def_lst -> action_def . action_def_lst
    (36) action_def_lst -> action_def .
    (35) action_def_lst -> . action_def action_def_lst
    (36) action_def_lst -> . action_def
    (37) action_def -> . LPAREN ACTION_KEY NAME action_def_body_list RPAREN

  ! shift/reduce conflict for LPAREN resolved as shift
    RPAREN          reduce using rule 36 (action_def_lst -> action_def .)
    LPAREN          shift and go to state 44

  ! LPAREN          [ reduce using rule 36 (action_def_lst -> action_def .) ]

    action_def                     shift and go to state 24
    action_def_lst                 shift and go to state 43

state 25

    (124) problem_def -> LPAREN . PROBLEM_KEY NAME RPAREN
    (13) domain_def -> LPAREN . DOMAIN_KEY NAME RPAREN
    (125) objects_def -> LPAREN . OBJECTS_KEY typed_constants_lst RPAREN
    (126) init_def -> LPAREN . INIT_KEY LPAREN AND_KEY ground_predicates_lst RPAREN RPAREN
    (127) init_def -> LPAREN . INIT_KEY ground_predicates_lst RPAREN
    (128) goal_def -> LPAREN . GOAL_KEY LPAREN AND_KEY ground_predicates_lst RPAREN RPAREN
    (129) goal_def -> LPAREN . GOAL_KEY ground_predicates_lst RPAREN

    PROBLEM_KEY     shift and go to state 32
    DOMAIN_KEY      shift and go to state 27
    OBJECTS_KEY     shift and go to state 33
    INIT_KEY        shift and go to state 34
    GOAL_KEY        shift and go to state 35


state 26

    (120) problem_structure_def -> domain_def .

    LPAREN          reduce using rule 120 (problem_structure_def -> domain_def .)
    RPAREN          reduce using rule 120 (problem_structure_def -> domain_def .)


state 27

    (13) domain_def -> LPAREN DOMAIN_KEY . NAME RPAREN

    NAME            shift and go to state 45


state 28

    (14) require_def -> LPAREN REQUIREMENTS_KEY . require_key_lst RPAREN
    (15) require_key_lst -> . require_key require_key_lst
    (16) require_key_lst -> . require_key
    (17) require_key -> . ADL_KEY
    (18) require_key -> . STRIPS_KEY
    (19) require_key -> . EQUALITY_KEY
    (20) require_key -> . TYPING_KEY
    (21) require_key -> . PROBABILISTIC_EFFECTS_KEY
    (22) require_key -> . NON_DETERMINISTIC_KEY
    (23) require_key -> . CONDITIONAL_EFFECTS_KEY
    (24) require_key -> . EXISTENTIAL_PRECONDITIONS_KEY
    (25) require_key -> . NEGATIVE_PRECONDITIONS_KEY
    (26) require_key -> . UNIVERSAL_PRECONDITIONS_KEY
    (27) require_key -> . DISJUNCTIVE_PRECONDITIONS_KEY

    ADL_KEY         shift and go to state 48
    STRIPS_KEY      shift and go to state 49
    EQUALITY_KEY    shift and go to state 50
    TYPING_KEY      shift and go to state 51
    PROBABILISTIC_EFFECTS_KEY shift and go to state 52
    NON_DETERMINISTIC_KEY shift and go to state 53
    CONDITIONAL_EFFECTS_KEY shift and go to state 54
    EXISTENTIAL_PRECONDITIONS_KEY shift and go to state 55
    NEGATIVE_PRECONDITIONS_KEY shift and go to state 56
    UNIVERSAL_PRECONDITIONS_KEY shift and go to state 57
    DISJUNCTIVE_PRECONDITIONS_KEY shift and go to state 58

    require_key_lst                shift and go to state 46
    require_key                    shift and go to state 47

state 29

    (28) types_def -> LPAREN TYPES_KEY . typed_names_lst RPAREN
    (111) typed_names_lst -> . names_lst HYPHEN type typed_names_lst
    (112) typed_names_lst -> . names_lst HYPHEN type
    (113) typed_names_lst -> . names_lst
    (114) names_lst -> . NAME names_lst
    (115) names_lst -> . NAME

    NAME            shift and go to state 61

    typed_names_lst                shift and go to state 59
    names_lst                      shift and go to state 60

state 30

    (29) constants_def -> LPAREN CONSTANTS_KEY . typed_constants_lst RPAREN
    (103) typed_constants_lst -> . constants_lst HYPHEN type typed_constants_lst
    (104) typed_constants_lst -> . constants_lst HYPHEN type
    (107) constants_lst -> . constant constants_lst
    (108) constants_lst -> . constant
    (131) constant -> . NAME

    NAME            shift and go to state 65

    typed_constants_lst            shift and go to state 62
    constants_lst                  shift and go to state 63
    constant                       shift and go to state 64

state 31

    (30) predicates_def -> LPAREN PREDICATES_KEY . predicate_def_lst RPAREN
    (31) predicate_def_lst -> . predicate_def predicate_def_lst
    (32) predicate_def_lst -> . predicate_def
    (33) predicate_def -> . LPAREN NAME typed_variables_lst RPAREN
    (34) predicate_def -> . LPAREN NAME RPAREN

    LPAREN          shift and go to state 66

    predicate_def_lst              shift and go to state 67
    predicate_def                  shift and go to state 68

state 32

    (124) problem_def -> LPAREN PROBLEM_KEY . NAME RPAREN

    NAME            shift and go to state 69


state 33

    (125) objects_def -> LPAREN OBJECTS_KEY . typed_constants_lst RPAREN
    (103) typed_constants_lst -> . constants_lst HYPHEN type typed_constants_lst
    (104) typed_constants_lst -> . constants_lst HYPHEN type
    (107) constants_lst -> . constant constants_lst
    (108) constants_lst -> . constant
    (131) constant -> . NAME

    NAME            shift and go to state 65

    typed_constants_lst            shift and go to state 70
    constants_lst                  shift and go to state 63
    constant                       shift and go to state 64

state 34
